--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>ds</h1>
+<div>
+<embed 
+id="SomeName"
+type="application/x-java-applet;version=1.6"
+width="999" height="999" 
+archive="demo-0.0.1-SNAPSHOT.jar"
+code="Bar.class"
+pluginspage="http://java.com/download/"
+myParam="YourParams" />
+
+</div>
